<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bluebackground"
    android:contentDescription="@string/addingToFavourite"
    tools:context=".WeatherDescription">


    <TextView
        android:id="@+id/textViewCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_margin"
        android:fontFamily="@font/alice"
        android:gravity="center"
        android:text="@string/city"
        android:textColor="@color/yellow"
        android:textSize="@dimen/text_size_big" />

    <ImageButton
        android:id="@+id/imageButtonFavourites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#00ffffff"
        android:layout_margin="@dimen/common_margin_small"
        android:contentDescription="@string/addingToFavourite"
        app:layout_constraintHorizontal_bias="0.168"
        app:srcCompat="@android:drawable/btn_star_big_off" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <ImageView
                android:id="@+id/imageViewWeatherGraphic"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:contentDescription="@null"
                android:layout_weight="1"
                tools:srcCompat="@drawable/sun" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/weather_description"
                android:textColor="@color/white"
                android:fontFamily="@font/alice"
                android:textSize="25sp" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tableloyout_extra"
        android:layout_margin="@dimen/common_margin_small"
        >


    <TextView
        android:id="@+id/textWebSite"
        android:layout_width="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center_horizontal"
        android:layout_gravity="center"
        android:textSize="@dimen/text_size_small"
        android:fontFamily="@font/alice"
        android:layout_height="wrap_content"
        android:text="@string/web_weather"
        android:textColor="@color/yellow"/>

        <Button
            android:id="@+id/buttonWebSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:backgroundTint="@color/blues"
            android:gravity="center_horizontal"
            android:text="@string/web_open_button"
            android:textColor="@color/white"
            android:fontFamily="@font/alice"
            android:textSize="@dimen/text_size_super_small" />

    </LinearLayout>
    <FrameLayout
        android:id="@+id/frame_for_extra_layout"
        android:layout_width="match_parent"
        android:layout_height="140dp">


    </FrameLayout>

</LinearLayout>